logs/dag_id=Data_transfer/run_id=manual__2023-11-22T10:02:28.259167+00:00/task_id=store_user/attempt=1.log
[2023-11-22T10:02:37.121+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: Data_transfer.store_user manual__2023-11-22T10:02:28.259167+00:00 [queued]>
[2023-11-22T10:02:37.133+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: Data_transfer.store_user manual__2023-11-22T10:02:28.259167+00:00 [queued]>
[2023-11-22T10:02:37.134+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-22T10:02:37.134+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 3
[2023-11-22T10:02:37.134+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-22T10:02:37.156+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): store_user> on 2023-11-22 10:02:28.259167+00:00
[2023-11-22T10:02:37.163+0000] {standard_task_runner.py:55} INFO - Started process 5957 to run task
[2023-11-22T10:02:37.168+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'Data_transfer', 'store_user', 'manual__2023-11-22T10:02:28.259167+00:00', '--job-id', '131', '--raw', '--subdir', 'DAGS_FOLDER/data_transfer.py', '--cfg-path', '/tmp/tmp4ilforzt']
[2023-11-22T10:02:37.170+0000] {standard_task_runner.py:83} INFO - Job 131: Subtask store_user
[2023-11-22T10:02:37.243+0000] {task_command.py:376} INFO - Running <TaskInstance: Data_transfer.store_user manual__2023-11-22T10:02:28.259167+00:00 [running]> on host f71f95879a41
[2023-11-22T10:02:37.334+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gaurav
AIRFLOW_CTX_DAG_ID=Data_transfer
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2023-11-22T10:02:28.259167+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-22T10:02:28.259167+00:00
[2023-11-22T10:02:37.335+0000] {postgres.py:129} INFO - Running copy expert: COPY table1_users FROM stdin WITH DELIMITER as ',' ON CONFLICT DO NOTHING, filename: /tmp/rand_processed_user.csv
[2023-11-22T10:02:37.346+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-11-22T10:02:37.351+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/data_transfer.py", line 39, in _store_user
    filename='/tmp/rand_processed_user.csv'
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 137, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "ON"
LINE 1: ...OPY table1_users FROM stdin WITH DELIMITER as ',' ON CONFLIC...
                                                             ^

[2023-11-22T10:02:37.361+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=Data_transfer, task_id=store_user, execution_date=20231122T100228, start_date=20231122T100237, end_date=20231122T100237
[2023-11-22T10:02:37.373+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 131 for task store_user (syntax error at or near "ON"
LINE 1: ...OPY table1_users FROM stdin WITH DELIMITER as ',' ON CONFLIC...
                                                             ^
; 5957)
[2023-11-22T10:02:37.419+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-22T10:02:37.444+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
